parser.output
Terminals unused in grammar

   INTEGER
   ARRAY
   OF
   IF
   THEN
   ENDIF
   ELSE
   WHILE
   DO
   FOR
   BEGINLOOP
   ENDLOOP
   CONTINUE
   READ
   WRITE
   AND
   OR
   NOT
   TRUE
   FALSE
   RETURN
   SUB
   ADD
   MULT
   DIV
   MOD
   EQ
   NEQ
   LT
   GT
   LTE
   GTE
   COLON
   COMMA
   L_PAREN
   R_PAREN
   L_SQUARE_BRACKET
   R_SQUARE_BRACKET
   ASSIGN
   IDENT_NUM


Grammar

    0 $accept: prog_start "end of file"

    1 prog_start: functions

    2 functions: %empty
    3          | function functions

    4 function: FUNCTION checkID SEMICOLON BEGIN_PARAMS dclr_loop END_PARAMS BEGIN_LOCALS dclr_loop END_LOCALS BEGIN_BODY stmt_loop SEMICOLON END_BODY

    5 checkID: IDENT_VAR

    6 dclr_loop: %empty

    7 stmt_loop: %empty


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
FUNCTION (258) 4
BEGIN_PARAMS (259) 4
END_PARAMS (260) 4
BEGIN_LOCALS (261) 4
END_LOCALS (262) 4
BEGIN_BODY (263) 4
END_BODY (264) 4
INTEGER (265)
ARRAY (266)
OF (267)
IF (268)
THEN (269)
ENDIF (270)
ELSE (271)
WHILE (272)
DO (273)
FOR (274)
BEGINLOOP (275)
ENDLOOP (276)
CONTINUE (277)
READ (278)
WRITE (279)
AND (280)
OR (281)
NOT (282)
TRUE (283)
FALSE (284)
RETURN (285)
SUB (286)
ADD (287)
MULT (288)
DIV (289)
MOD (290)
EQ (291)
NEQ (292)
LT (293)
GT (294)
LTE (295)
GTE (296)
SEMICOLON (297) 4
COLON (298)
COMMA (299)
L_PAREN (300)
R_PAREN (301)
L_SQUARE_BRACKET (302)
R_SQUARE_BRACKET (303)
ASSIGN (304)
IDENT_VAR (305) 5
IDENT_NUM (306)


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
prog_start (53)
    on left: 1, on right: 0
functions (54)
    on left: 2 3, on right: 1 3
function (55)
    on left: 4, on right: 3
checkID (56)
    on left: 5, on right: 4
dclr_loop (57)
    on left: 6, on right: 4
stmt_loop (58)
    on left: 7, on right: 4


State 0

    0 $accept: . prog_start "end of file"

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 2 (functions)

    prog_start  go to state 2
    functions   go to state 3
    function    go to state 4


State 1

    4 function: FUNCTION . checkID SEMICOLON BEGIN_PARAMS dclr_loop END_PARAMS BEGIN_LOCALS dclr_loop END_LOCALS BEGIN_BODY stmt_loop SEMICOLON END_BODY

    IDENT_VAR  shift, and go to state 5

    checkID  go to state 6


State 2

    0 $accept: prog_start . "end of file"

    "end of file"  shift, and go to state 7


State 3

    1 prog_start: functions .

    $default  reduce using rule 1 (prog_start)


State 4

    3 functions: function . functions

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 2 (functions)

    functions  go to state 8
    function   go to state 4


State 5

    5 checkID: IDENT_VAR .

    $default  reduce using rule 5 (checkID)


State 6

    4 function: FUNCTION checkID . SEMICOLON BEGIN_PARAMS dclr_loop END_PARAMS BEGIN_LOCALS dclr_loop END_LOCALS BEGIN_BODY stmt_loop SEMICOLON END_BODY

    SEMICOLON  shift, and go to state 9


State 7

    0 $accept: prog_start "end of file" .

    $default  accept


State 8

    3 functions: function functions .

    $default  reduce using rule 3 (functions)


State 9

    4 function: FUNCTION checkID SEMICOLON . BEGIN_PARAMS dclr_loop END_PARAMS BEGIN_LOCALS dclr_loop END_LOCALS BEGIN_BODY stmt_loop SEMICOLON END_BODY

    BEGIN_PARAMS  shift, and go to state 10


State 10

    4 function: FUNCTION checkID SEMICOLON BEGIN_PARAMS . dclr_loop END_PARAMS BEGIN_LOCALS dclr_loop END_LOCALS BEGIN_BODY stmt_loop SEMICOLON END_BODY

    $default  reduce using rule 6 (dclr_loop)

    dclr_loop  go to state 11


State 11

    4 function: FUNCTION checkID SEMICOLON BEGIN_PARAMS dclr_loop . END_PARAMS BEGIN_LOCALS dclr_loop END_LOCALS BEGIN_BODY stmt_loop SEMICOLON END_BODY

    END_PARAMS  shift, and go to state 12


State 12

    4 function: FUNCTION checkID SEMICOLON BEGIN_PARAMS dclr_loop END_PARAMS . BEGIN_LOCALS dclr_loop END_LOCALS BEGIN_BODY stmt_loop SEMICOLON END_BODY

    BEGIN_LOCALS  shift, and go to state 13


State 13

    4 function: FUNCTION checkID SEMICOLON BEGIN_PARAMS dclr_loop END_PARAMS BEGIN_LOCALS . dclr_loop END_LOCALS BEGIN_BODY stmt_loop SEMICOLON END_BODY

    $default  reduce using rule 6 (dclr_loop)

    dclr_loop  go to state 14


State 14

    4 function: FUNCTION checkID SEMICOLON BEGIN_PARAMS dclr_loop END_PARAMS BEGIN_LOCALS dclr_loop . END_LOCALS BEGIN_BODY stmt_loop SEMICOLON END_BODY

    END_LOCALS  shift, and go to state 15


State 15

    4 function: FUNCTION checkID SEMICOLON BEGIN_PARAMS dclr_loop END_PARAMS BEGIN_LOCALS dclr_loop END_LOCALS . BEGIN_BODY stmt_loop SEMICOLON END_BODY

    BEGIN_BODY  shift, and go to state 16


State 16

    4 function: FUNCTION checkID SEMICOLON BEGIN_PARAMS dclr_loop END_PARAMS BEGIN_LOCALS dclr_loop END_LOCALS BEGIN_BODY . stmt_loop SEMICOLON END_BODY

    $default  reduce using rule 7 (stmt_loop)

    stmt_loop  go to state 17


State 17

    4 function: FUNCTION checkID SEMICOLON BEGIN_PARAMS dclr_loop END_PARAMS BEGIN_LOCALS dclr_loop END_LOCALS BEGIN_BODY stmt_loop . SEMICOLON END_BODY

    SEMICOLON  shift, and go to state 18


State 18

    4 function: FUNCTION checkID SEMICOLON BEGIN_PARAMS dclr_loop END_PARAMS BEGIN_LOCALS dclr_loop END_LOCALS BEGIN_BODY stmt_loop SEMICOLON . END_BODY

    END_BODY  shift, and go to state 19


State 19

    4 function: FUNCTION checkID SEMICOLON BEGIN_PARAMS dclr_loop END_PARAMS BEGIN_LOCALS dclr_loop END_LOCALS BEGIN_BODY stmt_loop SEMICOLON END_BODY .

    $default  reduce using rule 4 (function)
